--- a/book report/index.html
+++ b/book report/index.html
@@ -9,12 +9,12 @@
       font-family: 'Arial', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f5f5f5; /* 新颜色 */
+      background-color: #f5f5f5; 
       color: #333;
     }
 
     header {
-      background-color: #333; /* 新颜色 */
+      background-color: #333; 
       color: #fff;
       text-align: center;
       padding: 1em;
@@ -32,19 +32,19 @@
       max-width: 400px;
       margin: 20px auto;
       display: block;
-      border-radius: 8px; /* 新增：圆角 */
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* 新增：阴影效果 */
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
 
     .book-content {
       text-align: justify;
-      margin-top: 20px; /* 新增：上边距 */
+      margin-top: 20px; 
     }
 
     .author-info {
-      margin-top: 20px; /* 新增：上边距 */
-      font-style: italic; /* 新增：斜体 */
-      color: #555; /* 新颜色 */
+      margin-top: 20px; 
+      font-style: italic; 
+      color: #555; 
     }
   </style>
 </head>
