--- a/museum discovery/1/index.html
+++ b/museum discovery/1/index.html
@@ -3,14 +3,27 @@
 <head>
     <title>Museum Discovery</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
 </head>
 <body>
+    <header><h1>Museum Discovery</h1></header>
     <div class="ginger"><img src="ginger.png" alt=""></div>
-
+    <div class="all">
+        <a href="../1/"><img src="1.png" alt=""></a>
+        <a href="../2/"><img src="2.png" alt=""></a>
+        <a href="../3/"><img src="3.png" alt=""></a>
+        <a href="../4/"><img src="4.png" alt=""></a>
+        <a href="../5/"><img src="5.png" alt=""></a>
+    </div>
     <div class="custom-cursor"></div>
     <script>
         // 设置随机出现的文字数组
-        var arr = ["在这披霜戴雪的冬日，一头扎进这沸腾的生命", "hello", "nihao", /* ... 其他文字 ... */];
+        var arr = ["It is a palm-sized hippo sculpture, with brilliant blue hue!", 
+        "The lotus pattern on its body symbolize the transition to the afterlife and possibly containing good wishes for rebirth.", 
+        "Its eyelids and its expression, which seemed to convey weariness and a touch of anger. ", 
+        "When viewed from the side, William bore a striking resemblance to Eeyore from Disney's animations, the donkey with a pink bow tied to his tail.",];
         
         var customCursor = document.querySelector('.custom-cursor');
 
