--- a/museum discovery/1/index.html
+++ b/museum discovery/1/index.html
@@ -20,10 +20,10 @@
     <div class="custom-cursor"></div>
     <script>
         // 设置随机出现的文字数组
-        var arr = ["It is a palm-sized hippo sculpture, with brilliant blue hue!", 
-        "The lotus pattern on its body symbolize the transition to the afterlife and possibly containing good wishes for rebirth.", 
-        "Its eyelids and its expression, which seemed to convey weariness and a touch of anger. ", 
-        "When viewed from the side, William bore a striking resemblance to Eeyore from Disney's animations, the donkey with a pink bow tied to his tail.",];
+        var arr = ["This is a hippopotamus that implies danger and looks a lot like a big piece of taro.", 
+        "It has no eyes, but has two large nostrils.", 
+        "It has many dry cracked lines on his body, which should be made in layers.", 
+        "It looked cute, but was actually quite bloody. Because the mud on his body was mixed with human blood and alcohol, it was a sacrificial item.",];
         
         var customCursor = document.querySelector('.custom-cursor');
 
