--- a/museum discovery/2/index.html
+++ b/museum discovery/2/index.html
@@ -20,10 +20,12 @@
     <div class="custom-cursor"></div>
     <script>
         // 设置随机出现的文字数组
-        var arr = ["It is a palm-sized hippo sculpture, with brilliant blue hue!", 
-        "The lotus pattern on its body symbolize the transition to the afterlife and possibly containing good wishes for rebirth.", 
-        "Its eyelids and its expression, which seemed to convey weariness and a touch of anger. ", 
-        "When viewed from the side, William bore a striking resemblance to Eeyore from Disney's animations, the donkey with a pink bow tied to his tail.",];
+        var arr = ["The entire bottle has a light creamy terra cotta color. ", 
+        "It  gives me a furry feeling that reminds me of a kiwi.", 
+        "The outer layer of salt glaze is a lot of small granules, which makes you worry that it might be a little prickly when touched. ", 
+        "Its body is not a very angular cylinder, more like a gas canister.",
+        "It feels like this bottle has a very dull look to it, a very silly and bewildered feeling.",
+    ];
         
         var customCursor = document.querySelector('.custom-cursor');
 
