--- a/museum discovery/1/index.html
+++ b/museum discovery/1/index.html
@@ -4,18 +4,23 @@
     <title>Museum Discovery</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dokdo&family=Smooch+Sans:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header><h1>Museum Discovery</h1></header>
+    <header><h1>Amulet</h1></header>
+    <div class="home"><img src="home.png" alt=""></div>
+    <p> 28/08/2022</p>
+    <div class="write"><img src="write.png" alt=""></div>
     <div class="ginger"><img src="ginger.png" alt=""></div>
+   
     <div class="all">
         <a href="../1/"><img src="1.png" alt=""></a>
         <a href="../2/"><img src="2.png" alt=""></a>
         <a href="../3/"><img src="3.png" alt=""></a>
         <a href="../4/"><img src="4.png" alt=""></a>
         <a href="../5/"><img src="5.png" alt=""></a>
+        <a href="../6/"><img src="more.png" alt=""></a>
     </div>
     <div class="custom-cursor"></div>
     <script>
