--- a/museum discovery/1/index.html
+++ b/museum discovery/1/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <header><h1>Amulet</h1></header>
-    <div class="home"><img src="home.png" alt=""></div>
+    <a href="../6/">
+        <div class="home"><img src="home.png" alt=""></div>
+    </a>
     <p> 28/08/2022</p>
     <div class="write"><img src="write.png" alt=""></div>
     <div class="ginger"><img src="ginger.png" alt=""></div>
@@ -20,7 +22,7 @@
         <a href="../3/"><img src="3.png" alt=""></a>
         <a href="../4/"><img src="4.png" alt=""></a>
         <a href="../5/"><img src="5.png" alt=""></a>
-        <a href="../6/"><img src="more.png" alt=""></a>
+        <a href="../7/"><img src="more.png" alt=""></a>
     </div>
     <div class="custom-cursor"></div>
     <script>
