--- a/museum discovery/6/index.html
+++ b/museum discovery/6/index.html
@@ -4,103 +4,109 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Dokdo&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Dokdo&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
       overflow: hidden;
-      background-color: rgb(0, 0, 0);
+      background-color: #000000;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+    }
+
+    .randomImageContainer {
+      position: relative;
+      width: 100vw;
+      height: 100vh;
     }
 
     .randomImage {
       position: absolute;
-      transition: transform 2s cubic-bezier(0.4, 0.0, 0.2, 1);
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 2;
     }
 
-    #randomButton {
+    .image1 {
+      transition: transform 2s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+    }
+
+    .image2 {
+      transition: transform 2s cubic-bezier(0.42, 0, 0.58, 1);
+    }
+
+    .image3 {
+      transition: transform 2s cubic-bezier(0.25, 0.1, 0.25, 1);
+    }
+
+    .image4 {
+      transition: transform 2s cubic-bezier(0.22, 1, 0.36, 1);
+    }
+
+    .image5 {
+      transition: transform 2s cubic-bezier(0.44, 0.12, 0.34, 1);
+    }
+
+    h1 {
+      font-size: 6em;
       position: fixed;
-      top: 50px;
-      left: 50px;
-      padding: 10px;
-      background-color: #000000;
-      color: #fff;
-      cursor: pointer;
-      border: 2px solid #ffffff;
-      outline: none;
-      border-radius: 5px; 
-      box-shadow: 0 15px 20px rgba(255, 255, 255, 0.5);
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: aliceblue;
+      font-family: Dokdo;
+      z-index: 0;
+      pointer-events: auto;
     }
-    h1{
-        font-size: 9em;
-        position: fixed;
-        top: 2em;
-        left: 5.5em;
-        color: aliceblue;
-        font-family: Dokdo;
-    }
-    
   </style>
   <title>Museum Discovery</title>
 </head>
-<h1>Museum <br> Discovery</h1>
 <body>
-  <a href="../5/"><img class="randomImage" src="plate.png" alt="平滑滚动图片"></a>
-  <a href="../1/"><img class="randomImage" src="ginger.png" alt="平滑滚动图片"></a>
-  <a href="../2/"><img class="randomImage" src="bear.png" alt="平滑滚动图片"></a>
-  <a href="../4/"><img class="randomImage" src="vase.png" alt="平滑滚动图片"></a>
-  <a href="../3/"><img class="randomImage" src="William.png" alt="平滑滚动图片"></a>
-
-  <button id="randomButton">click</button>
-
+  <div class="randomImageContainer">
+    <a href="../1/"><h1>Museum <br> Discovery</h1></a>
+    <img class="randomImage image1" src="plate.png" alt="平滑滚动图片">
+    <img class="randomImage image2" src="ginger.png" alt="平滑滚动图片">
+    <img class="randomImage image3" src="bear.png" alt="平滑滚动图片">
+    <img class="randomImage image4" src="vase.png" alt="平滑滚动图片">
+    <img class="randomImage image5" src="William.png" alt="平滑滚动图片">
+  </div>
   <script>
-    // 获取随机位置的函数
-    function getRandomPosition() {
-      var screenWidth = window.innerWidth;
-      var screenHeight = window.innerHeight;
-
-      var randomX = Math.floor(Math.random() * (screenWidth - 100)); // 保留边缘空间
-      var randomY = Math.floor(Math.random() * (screenHeight - 100)); // 保留边缘空间
-
-      return { x: randomX, y: randomY };
-    }
-
     // 执行动画的函数
     function animate(element) {
-      function move() {
-        var randomPosition = getRandomPosition();
+  // 鼠标移入时的事件
+  element.addEventListener('mouseenter', function() {
+    var randomPosition = getRandomPosition(); // 获取新的随机位置
+    var translateX = randomPosition.x - window.innerWidth / 2;
+    var translateY = randomPosition.y - window.innerHeight / 2;
 
-        // 平滑地将图像移入新的随机位置（使用硬件加速）
-        element.style.transition = 'transform 2s cubic-bezier(0.4, 0.0, 0.2, 1)';
-        element.style.transform = 'translate3d(' + randomPosition.x + 'px, ' + randomPosition.y + 'px, 0)';
+    element.style.transition = 'transform 2s cubic-bezier(0.68, -0.55, 0.27, 1.55)';
+    element.style.transform = 'translate(' + translateX + 'px, ' + translateY + 'px)';
+  });
+}
 
-        // 在动画完成后重置过渡属性
-        element.addEventListener('transitionend', function() {
-          element.style.transition = '';
-        }, { once: true });
-      }
-
-      // 启动移动动画
-      move();
-    }
 
     // 获取所有图片元素
     var images = document.querySelectorAll('.randomImage');
 
     // 启动动画
-    images.forEach(function(image) {
-      animate(image);
+    images.forEach(function(image, index) {
+      animate(image, index);
     });
 
-    // 获取按钮元素
-    var randomButton = document.getElementById('randomButton');
+    // 获取随机位置的函数
+    function getRandomPosition() {
+      var screenWidth = window.innerWidth;
+      var screenHeight = window.innerHeight;
 
-    // 监听按钮点击事件
-    randomButton.addEventListener('click', function() {
-      images.forEach(function(image) {
-        animate(image);
-      });
-    });
+      var randomX = Math.floor(Math.random() * screenWidth); // 在整个屏幕内获取随机位置
+      var randomY = Math.floor(Math.random() * screenHeight); // 在整个屏幕内获取随机位置
+
+      return { x: randomX, y: randomY };
+    }
   </script>
 </body>
 </html>
