--- a/chinese seal carving/index.html
+++ b/chinese seal carving/index.html
@@ -28,7 +28,7 @@
 
   
 <div class="stamp">
-  <h3>click on the stamp on the right to make your own!</h3>
+  <!-- <h3>click on the stamp on the right to make your own!</h3> -->
   <a href="filter.html"><img src="stamp.png" alt=""></a>
 </div>
 
