--- a/clock/index.html
+++ b/clock/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div class="heading"> <h1>Tree rings</h1> <h1>Tree rings</h1> <h1>Tree rings</h1> </div>
+    <div class="heading"> <h1>Tree ring clock</h1> <h1>Tree ring clock</h1> <h1>Tree ring clock</h1> </div>
     <div id="container">
       <div class="content">
         <p>This website design is inspired by tree rings. There is a countdown up to 36 in the middle, decreasing 1 by every 5 seconds in the real time and adding a number on the circle outside when the countdown ends. The circle will up to 20 numbers in real time it is one hour.t</p>
@@ -25,7 +25,7 @@
       </div>
       <canvas id="myCanvas"></canvas>
     </div>
-    <div class="heading"> <h1>Tree rings</h1> <h1>Tree rings</h1> <h1>Tree rings</h1> </div>
+    <div class="heading"> <h1>Tree ring clock</h1> <h1>Tree ring clock</h1> <h1>Tree ring clock</h1> </div>
     <script src="./options.js"></script>
     <script>
       // 拿到配置项 配置项详见：options.js
